--- a/SAwhale_analysis.ipynb
+++ b/SAwhale_analysis.ipynb
@@ -2137,7 +2137,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "### Determine whether the algorithmic strategies outperform both the market (S&P 500) and the whales portfolios.\n",
@@ -2145,18 +2145,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 83,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import datetime as dt\n",
-    "from pathlib import Path\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "%matplotlib inline"
+    "Create a Custom Portfolio"
    ]
   },
   {
