--- a/SAwhale_analysis.ipynb
+++ b/SAwhale_analysis.ipynb
@@ -2137,10 +2137,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Determine whether the algorithmic strategies outperform both the market (S&P 500) and the whales portfolios.\n",
+    "Determine whether the algorithmic strategies outperform both the market (S&P 500) and the whales portfolios.\n",
     "Algo 1"
    ]
   },
